Fix spacing and icon

--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ p {
 	font-size: 1.2em;
 }
 .S1 {
+	padding-top: 30px;
 	background-color: #f5f5f5;
 	color: #456575;
 }
